--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
 "scripts": {
-  "start": "concurrently \"npm run dev --prefix client\" \"npm run dev --prefix server\""
+  "start": "node index.js"
 },
   "keywords": [],
   "author": "",
